# icarus-archos-v.2

./: .gitignore  README.md  ROADMAP.md  THIRD-PARTY-LICENSES.md  apply-extra.sh  burn-in-checklist.md  icarus-assemble.sh  install_instructions.md  run.sh  update.sh
STEAL/btrfs-assistant-main (1)/btrfs-assistant-main/: CMakeLists.txt  README.md  changelog
STEAL/btrfs-assistant-main (1)/btrfs-assistant-main/src/: CMakeLists.txt  btrfs-assistant  btrfs-assistant-launcher  main.cpp
STEAL/btrfs-assistant-main (1)/btrfs-assistant-main/src/model/: SubvolModel.cpp
STEAL/btrfs-assistant-main (1)/btrfs-assistant-main/src/ui/: Cli.cpp  Cli.h  DiffViewer.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui
STEAL/btrfs-assistant-main (1)/btrfs-assistant-main/src/util/: Btrfs.cpp  Btrfs.h  CsvParser.cpp  Snapper.cpp  Snapper.h  System.cpp
STEAL/btrfs-assistant-main (1)/btrfs-assistant-main/src/widgets/: FilterLineEdit.cpp
STEAL/shell-main/shell-main/plugin/src/Caelestia/: CMakeLists.txt  cutils.cpp  cutils.hpp
STEAL/shell-main/shell-main/plugin/src/Caelestia/Config/: generalconfig.hpp  launcherconfig.hpp  lockconfig.hpp  sessionconfig.hpp  sidebarconfig.hpp  tokens.hpp
STEAL/shell-main/shell-main/plugin/src/Caelestia/Internal/: CMakeLists.txt
STEAL/shell-main/shell-main/plugin/src/Caelestia/Services/: CMakeLists.txt  cpu.cpp  diskinfo.cpp  gpu.cpp  gpu.hpp  memory.cpp  sessionmanager.cpp  sessionmanager.hpp  storage.cpp  tickingservice.cpp
docs/: AWESOME_LINUX_SOFTWARE.md  THEME_RESEARCH.md
layers/: 01-live-partition.sh  02-base-install.sh  03a-chroot-core.sh  (+10 more)
(+338 files in other folders)
